2005-11-05  Andy Wingo  <wingo@pobox.com>

	* scripts/fork-archive-pkgs: Work with tla or baz. I think.

	* scripts/upstream-missing: Change to use baz missing, doh.
	Renamed from patches-missing.

2005-11-04  Andy Wingo  <wingo@pobox.com>

	* scripts/patches-missing: Don't do anything about patches in
	upstream but not in the local copy. Handle the no-diff case
	better. Better non-full output.

	* scripts/patches-missing: Use {arch}/+upstream if available.
	Don't print diffs any more, just show the patches that are
	missing. Let --full do a cat-archive-log on the patch.

	* scripts/fork-archive-pkgs: Support baz.

	* scripts/patches-missing: New file, prints a list of patches
	missing from this version in another archive.

2005-04-09  Andreas Rottmann  <a.rottmann@gmx.at>

	* dev-environ.in: Set LTDL_LIBRARY_PATH instead of
	LD_LIBRARY_PATH.

	* h2def.py (find_enum_defs): Allow digits in enum names.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* scripts/make-release-note: Tweak evil regexps to correctly parse
	the NEWS files.

	* == Released guile-gnome-platform version 2.7.99 ==

2005-02-17  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (GUILE_LIBS): Require g-wrap >= 1.9.4.
	(DISABLE_DEPRECATED): Add a general option to disable deprecated
	cflags.

2005-02-24  Andreas Rottmann  <a.rottmann@gmx.at>

	* scripts/commit-all: Only commit when ChangeLog has been touched,
	thus avoiding arch-log-only commits.
	
	* scripts/commit-all, scripts/merge-all: New helper scripts.

2005-01-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* configure.ac: Require G-Wrap >= 1.9.4.

	* h2def.py (proto_pat): Fix for return types with spaces,
	e.g. unsigned long.

	* common.mk (packages): Make out-of-tree-build-safe.

2005-01-12  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2005-01-12  Andy Wingo  <wingo@pobox.com>

	* scripts/release-config:
	* scripts/make-release-note: New files.

2005-01-11  Andy Wingo  <wingo@pobox.com>
