@@ -1,9 +1,13 @@
 #!/bin/bash
-for i in `tla tree-lint -t`; do
+if test -z "$TLA"; then
+  TLA=`which tla || which baz`
+fi
+if echo $TLA | grep -q tla; then lint=tree-lint; else lint=lint; fi
+for i in `$TLA $lint -t`; do
   echo "Marking '$i' as precious"
   inv=`dirname $i`/.arch-inventory
   echo "precious ^$(basename $i)\$" >> $inv
-  if ! tla id --silent $inv; then
+  if ! $TLA id --silent $inv; then
     echo "Adding $inv as source"
     tla add -i `uuidgen` $inv;
   fi
